Comment out df print settings

--- a/the-best-of-baseball-awards.ipynb
+++ b/the-best-of-baseball-awards.ipynb
@@ -51,9 +51,9 @@
     "\n",
     "engine = create_engine('postgresql+psycopg2://iris@localhost:5432/baseball')\n",
     "\n",
-    "pd.set_option('display.width', 400)\n",
+    "#pd.set_option('display.width', 400)\n",
     "\n",
-    "display(HTML(\"<style>pre { white-space: pre !important; }</style>\"))"
+    "#display(HTML(\"<style>pre { white-space: pre !important; }</style>\"))"
    ]
   },
   {
